name:                example1-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cephonodes/example1-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Yuki N
maintainer:          yuki_cephonodes@outlook.com
copyright:           2019 Yuki N
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable example1-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
